--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             galattico.
           </p>
           <br>
-          
+
           <details>
             <summary>Gli otto pianeti sono:</summary>
               <ul id="c-listaPianeti">
@@ -182,5 +182,6 @@
       &#169; 2025 ALEX
     </footer>
 
+    <script async id="slcLiveChat" src="https://widget.sonetel.com/SonetelWidget.min.js" data-account-id="208677925"></script>
   </body>
 </html>
